tests/language_tests/pass/0107_unary_with_variables_and_calls.ee
fn negative_five() {
    return -5;
}

fn main() {
    let x = negative_five();
    println(-x);
    println(!x);
}
