tests/language_tests/fail/0053_return_keyword_as_variable_name.ee
fn main() {
    let return = 1;
}
